samples/_failures_safe/1761648126_1a2c26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f093ac6f.c: In function ‘main’:
./samples/SAFE/__tmp_f093ac6f.c:132:5: error: expected expression at end of input
  132 |     add_log_entry(&
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f093ac6f.c:132:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_f093ac6f.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f093ac6f.c:132:5: error: expected declaration or statement at end of input
  132 |     add_log_entry(&
      |     ^~~~~~~~~~~~~
